add yargs to package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv": "^0.4.6",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
-    "pad": "^1.0.0"
+    "pad": "^1.0.0",
+    "yargs": "^3.32.0"
   }
 }
